# dcdm-bagit

./: .gitignore  README.md  pyproject.toml
dcdm_bagit/: build.py  cli.py  gui.py  inputs.py  webgui.py
dcdm_bagit/bagit/: __init__.py  builder.py  manifest.py  verify.py
dcdm_bagit/spec/: __init__.py  layout.py
dcdm_bagit/subtitles/: srt_to_smpte_xml.py
dcdm_bagit/transcode/: prores.py
docs/: OUTPUT_SPEC.md
tests/: test_bagit.py  test_srt_to_xml.py
