[project]
name = "dcdm-bagit"
version = "0.1.0"
description = "Create BagIt packages for DCDM (Bundesarchiv). Optional ProRes->DCDM component generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DCDM mit BagIt" }]

[project.scripts]
dcdm-bagit = "dcdm_bagit.cli:main"
dcdm-bagit-gui = "dcdm_bagit.gui:main"
dcdm-bagit-web-gui = "dcdm_bagit.webgui:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dcdm_bagit"]

